--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Meeting Devon</title>
     <meta name="description" content="Two Leos collide.">
-    <meta property="og:title" content="European Travel Destinations">
+    <meta property="og:title" content="Meeting Devon">
     <meta property="og:description" content="Two Leos collide.">
     <meta property="og:image" content="<%= BASE_URL %>covercensored.png">
   </head>
